# rawcv

./: .cproject  .gitignore  .project  CMakeLists.txt  readme.md
src/: main.cpp
src/application/config/: AppConfig.cpp  AppConfig.h  ConfigExample.cpp  ConfigExample.h
src/application/config/json/: example1.json  example_empty.json
src/application/controllers/: MainLogic.cpp  MainLogic.h  MyImageAnalyser.cpp  MyImageAnalyser.h  RoboticArmController.cpp  RoboticArmController.h  StateController.cpp  StateController.h
src/application/logic/: InputStorage.cpp  InputStorage.h
src/application/logic/image/: ImageDisplayItem.h  ImagePreprocessItem.h  ImageStorage.cpp  ImageStorage.h  ImageStoreItem.h
src/application/logic/message/: MessageComposer.cpp  MessageComposer.h  StatusMessageItem.h  StatusMessageStorage.cpp  StatusMessageStorage.h
src/application/logic/robotic_arm/: MessageComposer.cpp  MessageComposer.h  MoveVisualization.h  RoboticArm.h  RoboticArmControlling.cpp  RoboticArmControlling.h  RoboticArmLimits.h  RoboticArmMove.h
src/application/logic/servo/: ServoIface.h  ServoMove.h  ServoRange.h  ServoRotationFB.h  ServoRotationLR.h
src/application/logic/usb/: UsbCommunicator.cpp  UsbCommunicator.h
src/application/logic/usb_controller/: MessageComposer.cpp  MessageComposer.h
src/application/modules/: PickUpObject.cpp  PickUpObject.h
src/application/modules/iface/: CVModul.h  CVModule.h
src/libs/usb/: UsbCommunicator.cpp  UsbCommunicator.h
src/system/config/: Constants.h
src/system/controllers/: DebugFrames.cpp  DebugFrames.h  ImageAnalyser.cpp  ImageAnalyser.h
src/system/filters/: BinaryFilter.cpp  BinaryFilter.h
src/system/helper/: BBHelper.cpp  BBHelper.h  ColorManipulation.cpp  ColorManipulation.h  DrawMethodHelper.h  DrawmethodHelper.cpp  FileSystemHelper.cpp  FileSystemHelper.h  MathHelper.h  MyLog.h  RotateBBHelper.cpp  RotateBBHelper.h  TimeHelper.cpp  TimeHelper.h
src/system/logic/input/: ProcessingFacade.cpp  ProcessingFacade.h
src/system/logic/input/path/: SourcePath.h
src/system/logic/input/processing/: DirImageFrameProcessing.cpp  DirImageFrameProcessing.h  FrameProcessing.h  VideoFrameProcessing.cpp  VideoFrameProcessing.h  VideoFrameProcessingLocalCamera.cpp  VideoFrameProcessingLocalCamera.h  VideoFrameProcessingRunEveryFrame.cpp  VideoFrameProcessingRunEveryFrame.h
src/testing/: RoboticArmControlling.cpp  RoboticArmControllingTest.cpp  RoboticArmControllingTest.h
src/testing/abstract/: TestIface.h
